--- a/src/app/pages/login/login.css
+++ b/src/app/pages/login/login.css
@@ -1,5 +1,10 @@
+.login-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container {
     max-width: 500px;
-    margin: 0 auto;
-    padding:3rem;
+    padding: 3rem;
 }
